# scrolly

./: .gitignore  README.md  README.rst  ha_api.py  output.py  pyproject.toml  scrolly-sample.ini  scrolly.py
deploy/: scrolly.service
