[project]
name = "scrolly"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Bakera",email = "marco@bakera.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrollphathd (>=1.3.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
